parameters setCompress deprecated in favor of setCompressionPolicy with 3 different possible values, COMPRESS, NEUTRAL and UNCOMPRESS